Revert "Add statistics-driven dashboard to V2 library"

--- a/v2/renderer/index.html
+++ b/v2/renderer/index.html
@@ -105,325 +105,6 @@
         gap: 10px;
       }
 
-      .project-dashboard {
-        margin-top: 18px;
-        padding: 20px 22px;
-        border-radius: 12px;
-        border: 1px solid rgba(148, 163, 184, 0.25);
-        background: rgba(15, 23, 42, 0.55);
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-      }
-
-      .project-dashboard__meta {
-        display: flex;
-        flex-direction: column;
-        gap: 14px;
-      }
-
-      .project-dashboard__summary {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 12px;
-        font-size: 0.9rem;
-        color: rgba(226, 232, 240, 0.85);
-      }
-
-      .project-dashboard__summary-item {
-        background: rgba(148, 163, 184, 0.18);
-        border-radius: 999px;
-        padding: 6px 14px;
-      }
-
-      .project-dashboard__actions {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        gap: 12px;
-        align-items: center;
-      }
-
-      .project-dashboard__filters {
-        display: flex;
-        gap: 8px;
-        flex-wrap: wrap;
-      }
-
-      .dashboard-filter {
-        padding: 6px 16px;
-        border-radius: 999px;
-        border: 1px solid rgba(148, 163, 184, 0.3);
-        background: rgba(15, 23, 42, 0.65);
-        color: rgba(226, 232, 240, 0.85);
-        cursor: pointer;
-        font-size: 0.85rem;
-      }
-
-      .dashboard-filter.is-active {
-        background: rgba(56, 189, 248, 0.15);
-        border-color: rgba(56, 189, 248, 0.5);
-        color: #bae6fd;
-      }
-
-      .project-dashboard__buttons {
-        display: flex;
-        gap: 8px;
-        flex-wrap: wrap;
-      }
-
-      .project-dashboard__list {
-        display: flex;
-        flex-direction: column;
-        gap: 18px;
-      }
-
-      .dashboard-chapter {
-        border: 1px solid rgba(148, 163, 184, 0.2);
-        border-radius: 12px;
-        padding: 18px 20px;
-        background: rgba(15, 23, 42, 0.45);
-        display: flex;
-        flex-direction: column;
-        gap: 16px;
-      }
-
-      .dashboard-chapter__header {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        gap: 12px;
-        align-items: center;
-      }
-
-      .dashboard-chapter__title {
-        font-size: 1.15rem;
-        font-weight: 600;
-        margin: 0;
-      }
-
-      .dashboard-meta-line {
-        display: flex;
-        gap: 12px;
-        flex-wrap: wrap;
-        font-size: 0.85rem;
-        color: rgba(226, 232, 240, 0.75);
-      }
-
-      .dashboard-progress {
-        position: relative;
-        width: 100%;
-        height: 8px;
-        border-radius: 999px;
-        background: rgba(15, 23, 42, 0.75);
-        overflow: hidden;
-      }
-
-      .dashboard-progress__bar {
-        position: absolute;
-        inset: 0;
-        border-radius: 999px;
-        transition: width 0.3s ease;
-      }
-
-      .dashboard-progress__bar--success {
-        background: linear-gradient(90deg, rgba(34, 197, 94, 0.8), rgba(16, 185, 129, 0.8));
-      }
-
-      .dashboard-progress__bar--warning {
-        background: linear-gradient(90deg, rgba(251, 191, 36, 0.85), rgba(245, 158, 11, 0.85));
-      }
-
-      .dashboard-progress__bar--danger {
-        background: linear-gradient(90deg, rgba(248, 113, 113, 0.8), rgba(239, 68, 68, 0.8));
-      }
-
-      .dashboard-levels {
-        display: flex;
-        flex-direction: column;
-        gap: 12px;
-      }
-
-      .dashboard-level {
-        border-radius: 10px;
-        border: 1px solid rgba(148, 163, 184, 0.2);
-        padding: 14px 16px;
-        background: rgba(15, 23, 42, 0.5);
-      }
-
-      .dashboard-level.is-drop-target {
-        border-color: rgba(56, 189, 248, 0.6);
-        box-shadow: 0 0 0 1px rgba(56, 189, 248, 0.35);
-      }
-
-      .dashboard-level__header {
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        gap: 10px;
-        align-items: center;
-        cursor: pointer;
-      }
-
-      .dashboard-level__title {
-        display: flex;
-        gap: 10px;
-        align-items: center;
-        font-weight: 600;
-      }
-
-      .dashboard-level__badges {
-        display: flex;
-        gap: 8px;
-        flex-wrap: wrap;
-        font-size: 0.8rem;
-        color: rgba(226, 232, 240, 0.75);
-      }
-
-      .dashboard-level__content {
-        margin-top: 14px;
-        display: grid;
-        gap: 12px;
-      }
-
-      .dashboard-projects {
-        display: grid;
-        gap: 12px;
-      }
-
-      .dashboard-project {
-        border: 1px solid rgba(148, 163, 184, 0.2);
-        border-radius: 10px;
-        padding: 14px 16px;
-        background: rgba(15, 23, 42, 0.55);
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        cursor: pointer;
-      }
-
-      .dashboard-project.is-selected {
-        border-color: rgba(56, 189, 248, 0.8);
-        box-shadow: 0 0 0 1px rgba(56, 189, 248, 0.3);
-      }
-
-      .dashboard-project.is-locked {
-        opacity: 0.75;
-      }
-
-      .dashboard-project__header {
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        gap: 8px;
-        align-items: baseline;
-      }
-
-      .dashboard-project__name {
-        font-weight: 600;
-      }
-
-      .dashboard-project__badge {
-        font-size: 0.8rem;
-        color: rgba(226, 232, 240, 0.75);
-      }
-
-      .dashboard-project__stats,
-      .dashboard-project__meta {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 10px;
-        font-size: 0.8rem;
-        color: rgba(226, 232, 240, 0.75);
-      }
-
-      .project-dashboard__empty {
-        display: none;
-        text-align: center;
-        padding: 16px;
-        border-radius: 10px;
-        background: rgba(148, 163, 184, 0.08);
-        color: rgba(226, 232, 240, 0.75);
-      }
-
-      .dashboard-rating {
-        color: #facc15;
-        font-size: 0.9rem;
-      }
-
-      .dashboard-review-indicator {
-        display: inline-flex;
-        align-items: center;
-        gap: 4px;
-        padding: 2px 8px;
-        border-radius: 999px;
-        background: rgba(248, 113, 113, 0.18);
-        color: #fecaca;
-        font-size: 0.75rem;
-      }
-
-      .dashboard-context-menu {
-        position: fixed;
-        background: rgba(15, 23, 42, 0.95);
-        border: 1px solid rgba(148, 163, 184, 0.35);
-        border-radius: 8px;
-        padding: 8px 0;
-        min-width: 220px;
-        z-index: 2100;
-        box-shadow: 0 15px 35px rgba(15, 23, 42, 0.45);
-      }
-
-      .dashboard-context-menu__item {
-        padding: 10px 16px;
-        font-size: 0.9rem;
-        color: rgba(226, 232, 240, 0.9);
-        cursor: pointer;
-      }
-
-      .dashboard-context-menu__item:hover {
-        background: rgba(56, 189, 248, 0.18);
-      }
-
-      .dialog-overlay {
-        position: fixed;
-        inset: 0;
-        background: rgba(15, 23, 42, 0.85);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        z-index: 2000;
-        padding: 24px;
-      }
-
-      .dialog {
-        background: rgba(15, 23, 42, 0.95);
-        border-radius: 12px;
-        border: 1px solid rgba(148, 163, 184, 0.35);
-        padding: 24px 28px;
-        max-width: 520px;
-        width: 100%;
-        color: #f8fafc;
-        box-shadow: 0 20px 45px rgba(15, 23, 42, 0.45);
-      }
-
-      .dialog h3 {
-        margin-top: 0;
-        margin-bottom: 16px;
-      }
-
-      .dialog-content {
-        font-size: 0.9rem;
-        color: rgba(226, 232, 240, 0.85);
-        display: grid;
-        gap: 8px;
-      }
-
-      .dialog-buttons {
-        margin-top: 18px;
-        display: flex;
-        justify-content: flex-end;
-      }
-
       .project-library__item {
         border: 1px solid rgba(148, 163, 184, 0.25);
         border-radius: 10px;
@@ -879,30 +560,7 @@
             <h3 class="project-library__title">Verfügbare Projekte</h3>
             <button type="button" id="refresh-library-button" class="secondary">Aktualisieren</button>
           </div>
-          <div class="project-dashboard" id="project-dashboard">
-            <div class="project-dashboard__meta">
-              <div class="project-dashboard__summary" id="project-dashboard-summary">
-                <span class="project-dashboard__summary-item" data-summary="projects">Projekte: 0</span>
-                <span class="project-dashboard__summary-item" data-summary="segments">Segmente: 0</span>
-                <span class="project-dashboard__summary-item" data-summary="progress">Fortschritt: 0 %</span>
-                <span class="project-dashboard__summary-item" data-summary="review">Review offen: 0</span>
-              </div>
-              <div class="project-dashboard__actions">
-                <div class="project-dashboard__filters" id="project-dashboard-filters">
-                  <button type="button" class="dashboard-filter is-active" data-filter="all">Alle</button>
-                  <button type="button" class="dashboard-filter" data-filter="open">Offen</button>
-                  <button type="button" class="dashboard-filter" data-filter="review">Review</button>
-                  <button type="button" class="dashboard-filter" data-filter="done">Fertig</button>
-                </div>
-                <div class="project-dashboard__buttons">
-                  <button type="button" class="secondary" id="project-dashboard-random">Zufallsprojekt</button>
-                  <button type="button" class="secondary" id="project-dashboard-random-review">Review-Zufall</button>
-                </div>
-              </div>
-            </div>
-            <div class="project-dashboard__list" id="project-dashboard-list"></div>
-            <div class="project-dashboard__empty" id="project-dashboard-empty">Noch keine Projekte vorhanden.</div>
-          </div>
+          <ul id="project-library-entries" class="project-library__list"></ul>
         </div>
         <form id="project-create-form" class="project-create">
           <label>
