Audio-Infos im DE-Editor einklappbar machen

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -750,7 +750,7 @@
                     <button class="btn btn-primary" onclick="applyDeEdit(true)" title="Speichern und den Dialog schließen">Speichern &amp; schließen</button>
                 </div>
             </div>
-            <div class="audio-info-panel" id="audioInfoPanel" aria-live="polite"></div>
+            <div class="audio-info-panel collapsed" id="audioInfoPanel" aria-live="polite"></div>
             <div class="wave-toolbar" id="waveToolbar">
                 <div class="wave-slider wave-zoom-slider">
                     <button type="button" class="wave-toolbar-btn" id="waveZoomOutBtn" title="Zoom verkleinern">−</button>
