--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -846,10 +846,19 @@
                                 <span class="quick-icon" aria-hidden="true">⚡</span>
                                 <span class="quick-text">Auto</span>
                             </button>
-                            <button id="quickTempoMatch" class="quick-btn" type="button" title="Tempo automatisch auf EN-Zeit anpassen" aria-label="Tempo automatisch auf EN-Zeit anpassen">
-                                <span class="quick-icon" aria-hidden="true">⏱️</span>
-                                <span class="quick-text">Tempo</span>
-                            </button>
+                            <div class="quick-tempo-block">
+                                <button id="quickTempoMatch" class="quick-btn" type="button" title="Tempo automatisch auf EN-Zeit anpassen" aria-label="Tempo automatisch auf EN-Zeit anpassen">
+                                    <span class="quick-icon" aria-hidden="true">⏱️</span>
+                                    <span class="quick-text">Tempo</span>
+                                </button>
+                                <div class="quick-tempo-inline" role="group" aria-label="Turbo Tempo-Schnellsteuerung">
+                                    <button id="quickTempoMinus" class="quick-mini-btn" type="button" title="Tempo schrittweise verringern" aria-label="Tempo schrittweise verringern">➖</button>
+                                    <span id="quickTempoDisplay" class="tempo-value quick-tempo-display" aria-live="polite">1,00</span>
+                                    <button id="quickTempoPlus" class="quick-mini-btn" type="button" title="Tempo schrittweise erhöhen" aria-label="Tempo schrittweise erhöhen">➕</button>
+                                    <button id="quickTempoSet120" class="quick-mini-btn quick-tempo-preset" type="button" title="Tempo direkt auf 1,20 setzen" aria-label="Tempo direkt auf 1,20 setzen">1,20×</button>
+                                    <button id="quickTempoSet130" class="quick-mini-btn quick-tempo-preset" type="button" title="Tempo direkt auf 1,30 setzen" aria-label="Tempo direkt auf 1,30 setzen">1,30×</button>
+                                </div>
+                            </div>
                             <button id="quickVolumeMatch" class="quick-btn" type="button" title="Lautstärke an EN anpassen" aria-label="Lautstärke an EN anpassen">
                                 <span class="quick-icon" aria-hidden="true">🔊</span>
                                 <span class="quick-text">Pegel</span>
