Add Zoo-Lautsprecher effect for DE audio editor

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -1034,6 +1034,13 @@
                         </fieldset>
 
                         <fieldset class="effect-group">
+                            <legend>🦁 Zoo-Lautsprecher</legend>
+                            <p class="effect-note">Simuliert eine Durchsage über alte Hallen-Lautsprecher in einem Betonbau.</p>
+                            <label id="zooSpeakerToggleLabel" class="effect-toggle" title="Zoo-Lautsprecher ein- oder ausschalten"><input type="checkbox" id="zooSpeakerToggle"> Zoo-Lautsprecher aktivieren</label>
+                            <p class="effect-note">Bandpass, Sättigung und kurzer Betonhall erhalten Sprachverständlichkeit bei deutlichem Raumgefühl.</p>
+                        </fieldset>
+
+                        <fieldset class="effect-group">
                             <legend>⚡ EM-Störgeräusch</legend>
                             <label id="emiVoiceDampToggleLabel" class="effect-toggle" title="Dämpft das Originalsignal bei Störungen"><input type="checkbox" id="emiVoiceDampToggle" onchange="toggleEmiVoiceDamp(this.checked)"> Sprachdämpfung</label>
                             <div class="emi-settings">
